--- a/views/home_fulfiller.ejs
+++ b/views/home_fulfiller.ejs
@@ -17,19 +17,19 @@
             <div class="vis-1">
                 <div class="data-num">
                     <div class="num-1">
-                        <p style="color: rgb(0, 137, 249);">My Ticket</p>
+                        <p style="color: rgb(0, 137, 249); font-weight: bold;">My Ticket</p>
                         <p id="my_ticket" class="ticket-num" style="color: rgb(0, 137, 249); font-weight: bold;">-</p>
                     </div>
                     <div class="num-2">
-                        <p style="color: rgb(255, 42, 42); font-weight: 500;">Critical Ticket</p>
+                        <p style="color: rgb(255, 42, 42); font-weight: bold;">Critical Ticket</p>
                         <p id="critical_ticket" class="ticket-num" style="color: rgb(255, 42, 42); font-weight: bold;">-</p>
                     </div>
                     <div class="num-3">
-                        <p style="color: rgb(12, 233, 0);">Open Ticket</p>
+                        <p style="color: rgb(12, 233, 0); font-weight: bold;">Open Ticket</p>
                         <p id="open_ticket" class="ticket-num" style="color: rgb(12, 233, 0); font-weight: bold;">-</p>
                     </div>
                     <div class="num-4">
-                        <p>All Ticket</p>
+                        <p style=" font-weight: bold;">All Ticket</p>
                         <p id="all_ticket" class="ticket-num" style="font-weight: bold;">-</p>
                     </div> 
                 </div>
