--- a/views/partials/form_general_info.ejs
+++ b/views/partials/form_general_info.ejs
@@ -1,16 +1,12 @@
-<label for="req_by">Requested By</label><input type="text" name="req_by" id="req_by">
-<label for="req_for">Requested For</label>
-<select name="req_for" id="req_for">
-    <option selected disabled hidden>Pilih Requestee</option>
-</select>
-
-
-<p>General Information</p>
-<label for="no_pekerja">Nomor Pekerja</label><input type="text" name="no_pekerja" id="no_pekerja"><br>
-<label for="nama_req">Nama Requestor</label><input type="text" name="nama_req" id="nama_req"><br>
-<label for="fungsi">Fungsi</label><input type="text" name="fungsi" id="fungsi"><br>
-<label for="perusahaan">Perusahaan</label><input type="text" name="perusahaan" id="perusahaan"><br>
-<label for="no_kontak">Nomor Kontak</label><input type="text" name="no_kontak" id="no_kontak"><br>
-<label for="email">Email</label><input type="email" name="email" id="email"><br>
-<label for="gedung">Gedung</label><input type="text" name="gedung" id="gedung"><br>
-<label for="desc_req">Deskripsi Request</label><input type="text" name="desc_req" id="desc_req"><br>
+<div class="g-info">
+    <p class="mb-2" style="font-weight: bold;">General Information</p>
+    <label for="no_pekerja">Nomor Pekerja</label><br><input type="text" name="no_pekerja" id="no_pekerja" style="width: 270px;" disabled><br>
+    <label for="nama_req">Nama Requestor</label><br><input type="text" name="nama_req" id="nama_req" style="width: 270px;" disabled><br>
+    <label for="fungsi">Fungsi</label><br><input type="text" name="fungsi" id="fungsi" style="width: 270px;" disabled><br>
+    <label for="perusahaan">Perusahaan</label><br><input type="text" name="perusahaan" id="perusahaan" style="width: 270px;" disabled><br>
+    <label for="no_kontak">Nomor Kontak</label><br><input type="text" name="no_kontak" id="no_kontak" style="width: 270px;"><br>
+    <label for="email">Email</label><br><input type="email" name="email" id="email" style="width: 270px;"><br>
+    <label for="gedung">Gedung</label><br><input type="text" name="gedung" id="gedung" style="width: 270px;"><br>
+    <label for="desc_req">Deskripsi Request</label><br>
+    <textarea name="desc_req" id="desc_req" cols="35" rows="2"></textarea><br>
+</div>
