--- a/views/request_form/consum_request.ejs
+++ b/views/request_form/consum_request.ejs
@@ -1,46 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consumables</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Request Consumables</title>
 </head>
-<body>
-    <h1>Request Consumables</h1>
-    <form id="form-request">
-        <%- include('../partials/form_general_info.ejs') %> 
 
-        <p>Request Details</p>
-        <label for="tgl_terima">Tanggal Pengambilan/Penerimaan</label><input type="date" name="tgl_terima" id="tgl_terima"><br>
-        <label for="lokasi_terima">Lokasi Penerimaan</label><input type="text" name="lokasi_terima" id="lokasi_terima"><br>
-        
-        <label for="nama_produk">Nama Produk</label><br>
-        <select name="nama_produk" id="nama_produk">
-            <option value='' selected disabled hidden>Pilih Nama Produk</option>
-            <% nama_produk.forEach(jenis => { %>
-                <option><%= jenis %></option>    
-            <% });%>
-            <option value="Lainnya">Lainnya</option> 
-        </select>
-        <input type="text" name="nama_produk_lainnya" id="nama_produk_lainnya" style="display: none;"><br>
-        <label for="jumlah">Jumlah Produk</label><br><input type="number" name="jumlah" id="jumlah" min="1" value="1"><br>
-        <label for="desc_produk">Deskripsi Produk</label><br><textarea name="desc_produk" id="desc_produk" cols="30" rows="5"></textarea><br>
-        <button type="button" id="add-item">Add</button>
+<body class="p-3">
+    <img src="/images/service/Consumables.png" width="40px" alt="atk"
+        style="border: 1px solid black; padding: 5px; border-radius: 10px;">
+    <span class="m-lg-2 fs-4 fw-bold" style="vertical-align: middle;">Request Consumables</span><br>
+    <label for="req_by" class="mt-3">Requested By :</label>
+    <input type="text" name="req_by" id="req_by" style="width: 220px; margin-bottom: 5px;" disabled><br>
+    <label for="req_for">Requested For :</label>
+    <select name="req_for" id="req_for" style="width: 215px;">
+        <option selected disabled hidden>Pilih Requestee</option>
+    </select>
+    <form id="form-request" class="mt-3 d-flex flex-row gap-5 pt-3" style="border-top: 1px solid black;">
+        <%- include('../partials/form_general_info.ejs') %>
+            <div class="req-detail">
+                <p class="mb-2" style="font-weight: bold;">Request Details</p>
+                <div class="req-detail">
+                    <label for="tgl_terima">Tanggal Pengambilan/Penerimaan</label><br><input type="date" name="tgl_terima"
+                        id="tgl_terima"><br>
+                    <label for="lokasi_terima">Lokasi Penerimaan</label><br><input type="text" name="lokasi_terima"
+                        id="lokasi_terima" style="width: 270px;"><br>
 
-        <table border="1" id="item">
-            <tr>
-                <th>Nama Produk</th>
-                <th>Jumlah Produk</th>
-                <th>Deskripsi Produk</th>
-                <th id="del-td"></th>
-            </tr>
-            <tbody id="item-list"></tbody>
-        </table>
-        <button type="submit" id="submit">Submit</button>
+                    <p class="mb-2 mt-4" style="font-weight: bold;">Item Details</p>
+                    <label for="nama_produk">Nama Produk</label><br>
+                    <select name="nama_produk" id="nama_produk" style="width: 250px;">
+                        <option value='' selected disabled hidden>Pilih Nama Produk</option>
+                        <% nama_produk.forEach(jenis=> { %>
+                            <option>
+                                <%= jenis %>
+                            </option>
+                            <% });%>
+                                <option value="Lainnya">Lainnya</option>
+                    </select>
+                    <input type="text" name="nama_produk_lainnya" id="nama_produk_lainnya" style="display: none;"><br>
+                    <label for="jumlah">Jumlah Produk</label><br><input type="number" name="jumlah" id="jumlah" min="1"
+                        value="1"><br>
+                    <label for="desc_produk">Deskripsi Produk</label><br><textarea name="desc_produk" id="desc_produk" cols="35" rows="2"></textarea><br>
+                    <button type="button" id="add-item" class="btn btn-primary">Add</button>
+                </div>
+            </div>
+            <div class="table-item">
+                <p class="mb-2" style="font-weight: bold;">Item List</p>
+                <table border="1" id="item" class="table table-striped table-bordered">
+                    <tr>
+                        <th>Nama Produk</th>
+                        <th>Jumlah Produk</th>
+                        <th>Deskripsi Produk</th>
+                        <th id="del-td"></th>
+                    </tr>
+                    <tbody id="item-list"></tbody>
+                </table>
+                <button type="submit" id="submit" class="btn btn-success">Submit Request</button>
+            </div>
     </form>
 
     <script src="/scripts/consum/itemConsum.js"></script>
     <script src="/scripts/consum/requestConsum.js"></script>
     <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
+
 </html>
