--- a/views/request_form/eventsupp_request.ejs
+++ b/views/request_form/eventsupp_request.ejs
@@ -1,48 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Request Event Support</title>
 </head>
-<body>
-    <h1>Request Event Support</h1>
-    <form id="form-request">
-        <%- include('../partials/form_general_info.ejs') %> 
 
-        <p>Request Details</p>
-        <label for="jumlah_peserta">Jumlah Peserta</label><input type="number" name="jumlah_peserta" id="jumlah_peserta"><br>
-        <label for="lokasi_kegiatan">Lokasi Kegiatan</label><input type="text" name="lokasi_kegiatan" id="lokasi_kegiatan"><br>
-        <label for="tgl_mulai">Tanggal Mulai</label><input type="date" name="tgl_mulai" id="tgl_mulai"><br>
-        <label for="tgl_selesai">Tanggal Selesai</label><input type="date" name="tgl_selesai" id="tgl_selesai"><br>
+<body class="p-3">
+    <img src="/images/service/Event Support.png" width="40px" alt="atk"
+        style="border: 1px solid black; padding: 5px; border-radius: 10px;">
+    <span class="m-lg-2 fs-4 fw-bold" style="vertical-align: middle;">Request Event Support</span><br>
+    <label for="req_by" class="mt-3">Requested By :</label>
+    <input type="text" name="req_by" id="req_by" style="width: 220px; margin-bottom: 5px;" disabled><br>
+    <label for="req_for">Requested For :</label>
+    <select name="req_for" id="req_for" style="width: 215px;">
+        <option selected disabled hidden>Pilih Requestee</option>
+    </select>
+    <form id="form-request" class="mt-3 d-flex flex-row gap-5 pt-3" style="border-top: 1px solid black;">
+        <%- include('../partials/form_general_info.ejs') %>
+            <div class="req-detail">
+                <p class="mb-2" style="font-weight: bold;">Request Details</p>
+                <div class="req-detail">
+                    <label for="jumlah_peserta">Jumlah Peserta</label><br><input type="number" name="jumlah_peserta" id="jumlah_peserta" min="1" value="1"><br>
+                    <label for="lokasi_kegiatan">Lokasi Kegiatan</label><br><input type="text" name="lokasi_kegiatan" id="lokasi_kegiatan" style="width: 270px;"><br>
+                    <label for="tgl_mulai">Tanggal Mulai</label><br><input type="date" name="tgl_mulai" id="tgl_mulai"><br>
+                    <label for="tgl_selesai">Tanggal Selesai</label><br><input type="date" name="tgl_selesai" id="tgl_selesai"><br>
 
-        <label for="nama_item">Nama Item</label><br>
-        <select name="nama_item" id="nama_item">
-            <option value='' selected disabled hidden>Pilih Nama Item</option>
-            <% nama_item.forEach(jenis => { %>
-                <option><%= jenis %></option>    
-            <% });%>
-            <option value="Lainnya">Lainnya</option> 
-        </select>
-        <input type="text" name="nama_item_lainnya" id="nama_item_lainnya" style="display: none;"><br>
-        <label for="jumlah">Jumlah Item</label><br><input type="number" name="jumlah" id="jumlah" min="1" value="1"><br>
-        <label for="desc_item">Deskripsi Item</label><br><textarea name="desc_item" id="desc_item" cols="30" rows="5"></textarea><br>
-        <button type="button" id="add-item">Add</button>
-
-        <table border="1" id="item">
-            <tr>
-                <th>Nama Item</th>
-                <th>Jumlah Item</th>
-                <th>Deskripsi Item</th>
-                <th id="del-td"></th>
-            </tr>
-            <tbody id="item-list"></tbody>
-        </table>
-        <button type="submit" id="submit">Submit</button>
+                    <p class="mb-2 mt-4" style="font-weight: bold;">Item Details</p>
+                    <label for="nama_item">Nama Item</label><br>
+                    <select name="nama_item" id="nama_item">
+                        <option value='' selected disabled hidden>Pilih Nama Item</option>
+                        <% nama_item.forEach(jenis => { %>
+                            <option><%= jenis %></option>    
+                        <% });%>
+                        <option value="Lainnya">Lainnya</option> 
+                    </select>
+                    <input type="text" name="nama_item_lainnya" id="nama_item_lainnya" style="display: none;"><br>
+                    <label for="jumlah">Jumlah Item</label><br><input type="number" name="jumlah" id="jumlah" min="1" value="1"><br>
+                    <label for="desc_item">Deskripsi Item</label><br><textarea name="desc_item" id="desc_item" cols="35" rows="2"></textarea><br>
+                    <button type="button" id="add-item" class="btn btn-primary">Add</button>
+                </div>
+            </div>
+            <div class="table-item">
+                <p class="mb-2" style="font-weight: bold;">Item List</p>
+                <table border="1" id="item" class="table table-striped table-bordered">
+                    <tr>
+                        <th>Nama Item</th>
+                        <th>Jumlah Item</th>
+                        <th>Deskripsi Item</th>
+                        <th id="del-td"></th>
+                    </tr>
+                    <tbody id="item-list"></tbody>
+                </table>
+                <button type="submit" id="submit" class="btn btn-success">Submit Request</button>
+            </div>
     </form>
 
     <script src="/scripts/event_support/itemEventSupp.js"></script>
     <script src="/scripts/event_support/requestEventSupp.js"></script>
     <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
+
 </html>
