--- a/views/request_form/kartunama_request.ejs
+++ b/views/request_form/kartunama_request.ejs
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kartu Nama</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Request Kartu Nama</title>
 </head>
-<body>
-    <h1>Request Kartu Nama</h1>
-    <form id="form-request">
-        <%- include('../partials/form_general_info.ejs') %> 
 
-        <p>Request Details</p>
-        <label for="tgl_terima">Tanggal Pengambilan/Penerimaan</label><input type="date" name="tgl_terima" id="tgl_terima"><br>
-        <label for="lokasi_terima">Lokasi Penerimaan</label><input type="text" name="lokasi_terima" id="lokasi_terima"><br>
+<body class="p-3">
+    <img src="/images/service/Kartu Nama.png" width="40px" alt="atk"
+        style="border: 1px solid black; padding: 5px; border-radius: 10px;">
+    <span class="m-lg-2 fs-4 fw-bold" style="vertical-align: middle;">Request Kartu Nama</span><br>
+    <label for="req_by" class="mt-3">Requested By :</label>
+    <input type="text" name="req_by" id="req_by" style="width: 220px; margin-bottom: 5px;" disabled><br>
+    <label for="req_for">Requested For :</label>
+    <select name="req_for" id="req_for" style="width: 215px;">
+        <option selected disabled hidden>Pilih Requestee</option>
+    </select>
+    <form id="form-request" class="mt-3 d-flex flex-row gap-5 pt-3" style="border-top: 1px solid black;">
+        <%- include('../partials/form_general_info.ejs') %>
+            <div class="req-detail">
+                <p class="mb-2" style="font-weight: bold;">Request Details</p>
+                <div class="req-detail">
+                    <label for="tgl_terima">Tanggal Pengambilan/Penerimaan</label><br><input type="date" name="tgl_terima" id="tgl_terima"><br>
+                    <label for="lokasi_terima">Lokasi Penerimaan</label><br><input type="text" name="lokasi_terima" id="lokasi_terima" style="width: 270px"><br>
 
-        <label for="no_pekerja_kartu">Nomor Pekerja</label><input type="text" name="no_pekerja_kartu" id="no_pekerja_kartu"><br>
-        <label for="nama_pekerja">Nama Pekerja</label><input type="text" name="nama_pekerja" id="nama_pekerja"><br>
-        <label for="jabatan">Jabatan</label><input type="text" name="jabatan" id="jabatan"><br>
-        <label for="fungsi_kartu">Fungsi</label><input type="text" name="fungsi_kartu" id="fungsi_kartu"><br>
-        <label for="direktorat">Direktorat</label><input type="text" name="direktorat" id="direktorat"><br>
-        <label for="alamat_kantor">Alamat Kantor</label><input type="text" name="alamat_kantor" id="alamat_kantor"><br>
-        <label for="desc_tambah">Deskripsi Tambahan</label><br>
-        <textarea name="desc_tambah" id="desc_tambah" cols="30" rows="5"></textarea><br>
-
-        <button type="submit" id="submit">Submit</button>
+                    <label for="no_pekerja_kartu">Nomor Pekerja</label><br><input type="text" name="no_pekerja_kartu" id="no_pekerja_kartu" style="width: 270px"><br>
+                    <label for="nama_pekerja">Nama Pekerja</label><br><input type="text" name="nama_pekerja" id="nama_pekerja" style="width: 270px"><br>
+                    <label for="jabatan">Jabatan</label><br><input type="text" name="jabatan" id="jabatan" style="width: 270px"><br>
+                    <label for="fungsi_kartu">Fungsi</label><br><input type="text" name="fungsi_kartu" id="fungsi_kartu" style="width: 270px"><br>
+                    <label for="direktorat">Direktorat</label><br><input type="text" name="direktorat" id="direktorat" style="width: 270px"><br>
+                    <label for="alamat_kantor">Alamat Kantor</label><br><input type="text" name="alamat_kantor" id="alamat_kantor" style="width: 270px"><br>
+                </div>
+            </div>
+            <div class="table-item" style="margin-top: 33px;">
+                <label for="desc_tambah">Deskripsi Tambahan</label><br>
+                <textarea name="desc_tambah" id="desc_tambah" cols="35" rows="2"></textarea><br>
+                <button type="submit" id="submit" class="btn btn-success">Submit Request</button>
+            </div>
     </form>
 
     <script src="/scripts/kartunama/requestKartunama.js"></script>
     <script src="/scripts/cookiesGeneralInfo.js"></script>
 </body>
+
 </html>
