--- a/views/ticket_console.ejs
+++ b/views/ticket_console.ejs
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/jstable.css">
+    <script type="text/javascript" src="/jstable.min.js"></script>
     <title>OFSER | Home</title>
 </head>
 <body>
     <%- include('./partials/navbar_fulfiller.ejs') %>
 
-    <div class="content">
+    <div class="content-table">
         <p id="content-title">Ticket Console</p>
         <div class="console">
             <div class="table-ticket">
-                <table border="1" id="table-ticket">
-                    <tr><th>Priority</th><th>Request ID</th><th>Work Order ID</th><th>Customer Name</th><th>Assignee</th><th>Summary</th><th>Status</th><th>Created At</th><th>Last Modified</th></tr>
+                <table border="1" id="table-ticket" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr><th>Priority</th><th>Request ID</th><th>Work Order ID</th><th>Customer Name</th><th>Assignee</th><th>Summary</th><th>Status</th><th>Created At</th><th>Last Modified</th></tr>
+                    </thead>
                     <tbody id="tbody"> 
                         <% let i=1 %> 
                         <% ticket.forEach(t => { %>
                             <tr id="row-<%= i %>" data-ticket="<%= t._id %>">
-                                <td><%= t.priority %></td>
-                                <td><%= t.request_id %></td>
-                                <td><%= t.workorder_id %></td>
+                                <td style="text-align: center;"><%= t.priority %></td>
+                                <td style="text-align: center;"><a href="/ticket-request/<%= t._id %>"><%= t.request_id %></a></td>
+                                <td style="text-align: center;"><%= t.workorder_id %></td>
                                 <td><%= t.nama_req %></td>
                                 <td><% if(t.assignee){ %><%= t.assignee %><% }else{ %>System<% } %></td>
                                 <td><%= t.jenis_ticket %></td>
-                                <td><%= t.status %></td>
+                              <td><%= t.status %></td>
                                 <td><%= t.createdAt.toUTCString().slice(5, -13) %></td>
                                 <td><%= t.updatedAt.toUTCString().slice(5, -13) %></td>                                
                             </tr>
@@ -37,23 +41,17 @@
         </div>
     </div>
 
-    <div class="footer">
-        <p>Kontak Admin</p>
-        <div>
-            <p>Whatsapp: +62-85263422340</p>
-            <p>Email: lyft0@protonmail.com</p>
-        </div>
-    </div>
+    <%- include('./partials/footer.ejs') %>
 
     <script src="/scripts/home/getCookies.js"></script>
     <script>
-        for(let i=1; i<=document.querySelector('#tbody').rows.length;i++){
-            document.querySelector('#row-'+i.toString()).addEventListener('click', (event) => {
-                window.location.href = '/ticket-request/'+event.currentTarget.dataset.ticket
-            })
-        }
+        let myTable = new JSTable("#table-ticket");
+    </script>
+    <script>
         document.querySelector('#profile').href = `/profile/${id_user}`
         document.querySelector('#profile_img').src = '/images/profile/'+cookies.image
     </script>
+    <script src="/scripts/home/searchTicket.js"></script>
+    
 </body>
 </html>
