--- a/views/ticket_request.ejs
+++ b/views/ticket_request.ejs
@@ -7,22 +7,7 @@
     <title>OFSER | Home</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-1">
-            <p>OFSER</p>
-            <a href="/home-req">Dashboard</a>
-            <a href="/ticket-console">Ticket Console</a>
-            <div class="search-group">
-                <input type="search" id="input-search" placeholder="Request ID"/>
-                <button type="button" id="btn-search">Search</button>   
-            </div>
-        </div>
-        <div class="navbar-2">
-            <a href="#">Notification</a>
-            <p>Welcome, <span id="user-name">Lucifer</span></p>
-            <a href="#">Profile</a>
-        </div>
-    </div>
+    <%- include('./partials/navbar_fulfiller.ejs') %>
 
     <div class="content">
         <p id="content-title">Ticket Request</p>
@@ -45,7 +30,7 @@
                 </div>
                 <div class="req-info">
                     <div class="user-info">
-                        <img src="/images/profile/<%= ticket.req_by %>.png" alt="profile" style="width: 80px; height: 80px; border-radius: 10px;">
+                        <img src="/images/profile/<%= ticket.req_by %>.png" onerror="this.src='/images/profile/default.png'" alt="profile" style="width: 80px; height: 80px; border-radius: 10px;">
                         <div class="user-infos">
                             <p style="font-size: 0.9em; margin-bottom: 4px;">Customer</p>
                             <p style="font-size: 1.2em; font-weight: bold;"><%= ticket.nama_req %></p>
@@ -84,22 +69,11 @@
                         </div>
                     <% }); %>
                 </div>
-                
             </div>
         </div>
-
-
-    
-    
     </div>
         
-    <div class="footer">
-        <p>Kontak Admin</p>
-        <div>
-            <p>Whatsapp: +62-85263422340</p>
-            <p>Email: lyft0@protonmail.com</p>
-        </div>
-    </div>
+    <%- include('./partials/footer.ejs') %>
 
     <script src="/scripts/home/getCookies.js"></script>
     <script src="/scripts/home/printTicket.js"></script>
@@ -107,9 +81,11 @@
         document.querySelector(".btn-workorder").addEventListener('click', () => {
             window.location.href = '/ticket-workorder/'+event.currentTarget.dataset.ticket
         })
-
+        document.querySelector('#profile').href = `/profile/${id_user}`
+        document.querySelector('#profile_img').src = '/images/profile/'+cookies.image
         var endpoint = 'ticket-request'
     </script>
     <script src="/scripts/home/activity.js"></script>
+    <script src="/scripts/home/searchTicket.js"></script>
 </body>
 </html>
